# synth

./: CMakeLists.txt  LICENSE.txt  README.md  base.css  code-simple.css  code.css  codestyle-gruvbox.css  codestyle-vs.css  cursorkind.py  dir2html.py  dirlisting.css  index.html  mk-gh-pages.sh
html-resources/: base-code.css  code-simple.css  code.css  code.js  dirlisting.css
lib-llvm/include/clang-c/: BuildSystem.h.html  CXCompilationDatabase.h.html  CXErrorCode.h.html  CXString.h.html  Index.h.html  Platform.h.html
src/: CMakeLists.txt  CgStr.hpp  CgStr.hpp.html  DoxytagResolver.cpp  DoxytagResolver.cpp.html  DoxytagResolver.hpp  DoxytagResolver.hpp.html  FileIdSet.hpp  FileIdSupport.hpp  FileIdSupport.hpp.html  HighlightedFile.cpp  HighlightedFile.hpp  MultiTuProcessor.cpp  MultiTuProcessor.cpp.html  MultiTuProcessor.hpp  MultiTuProcessor.hpp.html  SimpleTemplate.cpp  SimpleTemplate.cpp.html  SimpleTemplate.hpp  SimpleTemplate.hpp.html  SymbolDeclaration.hpp  annotate.cpp  annotate.cpp.html  annotate.hpp  annotate.hpp.html  basicHl.cpp  basicHl.cpp.html  basicHl.hpp  basicHl.hpp.html  cgWrappers.hpp  cgWrappers.hpp.html  cmdline.cpp  cmdline.cpp.html  cmdline.hpp  cmdline.hpp.html  config.hpp  config.hpp.html  dbgmain.cpp  dbgmain.cpp.html  debug.cpp  (+17 more)
